# rust-websocket-mytutorial

./: .gitignore  flake.nix
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: errors.rs  handlers.rs  main.rs
server/src/errors/: root.rs  ws.rs
server/src/handlers/: ping.rs  ws.rs
