[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
# network
axum = { version = "0.8.4", features = ["ws"] }
tokio = { version = "1.44.2", features = ["full"] }
# error
thiserror = "2.0.12"
# json
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
# cors
tower-http = { version = "0.6.4", features = ["cors"] }
# logging
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
